--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 :root {
     --primary-color: #7C3AED;
-    --off-white: #F3F4F6;
+    --off-white: #e8ddf0;
     --dark-gray: #6B7280;
 }
 
@@ -23,7 +23,7 @@ hr {
 
 /** container **/
 .container {
-    padding: 0rem 1rem;
+    padding: 0rem 2rem;
 }
 
 .container-center {
@@ -119,6 +119,11 @@ hr {
     text-align: center;
     padding-top: 1rem;
     color: var(--dark-gray);
+}
+.hero .hero-sub {
+    text-align: center;
+    display: block;
+    color:black;
 }
 
 .hero .hero-heading .heading-inverted {
