--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,9 @@ hr {
     max-width: 140px;
     margin: 1rem 1rem 1rem 0rem;
 }
+.link-primary:hover{
+    background-color: #bca6d4;
+}
 
 .link-secondary {
     color: var(--primary-color);
@@ -54,6 +57,9 @@ hr {
     display: block;
     max-width: 140px;
     margin: 1rem 1rem 1rem 0rem;
+}
+.link-secondary:hover{
+    background-color: #bca6d4;
 }
 
 /** look into BEM naming convention for CSS **/
@@ -110,7 +116,7 @@ hr {
 
 .hero .hero-img {
     max-width: 80%;
-    width: 350px;
+    width: 450px;
     display: block;
     margin: auto;
 }
@@ -118,11 +124,15 @@ hr {
 .hero .hero-heading {
     text-align: center;
     padding-top: 1rem;
+    letter-spacing: 2px;
+    word-spacing: 3px;
     color: var(--dark-gray);
 }
 .hero .hero-sub {
     text-align: center;
     display: block;
+    letter-spacing: 2px;
+    word-spacing: 3px;
     color:black;
 }
 
@@ -161,9 +171,13 @@ hr {
     box-shadow: 0px 2px 2px #ad8ac4;
     padding: 8px 40px;
     border-radius: 0.5rem;
-    border: 2px outset #caa8f1;
+    border: 2px outset #d2b9ee;
     background: #6b2adb;
     letter-spacing: 3px;
+}
+.btn:hover{
+    text-decoration: underline;
+    background: #7C3AED;
 }
 .number{
     background-color: #e3d2ff;
